# RayTracing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json  version.cmake.txt
Backend/: CMakeLists.txt  Export.h  pch.h
Backend/Communication/: Model.cpp  Model.h  Model.hpp  Signal.h  Signal.hpp  SignalBase.h
Backend/Geometry/: Point.h  Point.hpp  Point2.h  Point2.hpp  Point3.h  Point3.hpp  Ray.h  Ray.hpp  Rect.h  Rect.hpp
Backend/Image/: Camera.cpp  Camera.h  Camera.hpp  Image.cpp  Image.h  Image.hpp
Backend/Materials/: Dielectric.cpp  Dielectric.h  Dielectric.hpp  Lambertian.cpp  Lambertian.h  Lambertian.hpp  Material.h  Metal.cpp  Metal.h  Metal.hpp
Backend/Objects/: BaseSphere.cpp  BaseSphere.h  DielectricSphere.cpp  DielectricSphere.h  HitRecord.cpp  HitRecord.h  HitRecord.hpp  Hittable.h  Hittable.hpp  HittableList.cpp  HittableList.h  HittableList.hpp  LambertianSphere.h  MetalSphere.cpp  MetalSphere.h  Sphere.cpp  Sphere.h  Sphere.hpp
Backend/Objects/Sphere/: BaseSphere.cpp  BaseSphere.h  BaseSphere.hpp  DielectricSphere.cpp  DielectricSphere.h  DielectricSphere.hpp  LambertianSphere.cpp  LambertianSphere.h  LambertianSphere.hpp  MetalSphere.cpp  MetalSphere.h  MetalSphere.hpp  Sphere.h  Sphere.hpp
Backend/Threads/: Thread.cpp  Thread.h  Thread.hpp  ThreadsManager.cpp  ThreadsManager.h
Backend/Utils/: Interval.h  Interval.hpp  Utils.cpp  Utils.h  Utils.hpp  XoshiroCpp.hpp
Frontend/: CMakeLists.txt  pch.h
Frontend/App/: App.cpp  App.h  Application.cpp  Application.h  GraphicsHandler.h  GraphicsHandler.hpp  WindowHandler.cpp  WindowHandler.h  WindowHandler.hpp
Frontend/Base/: Layout.cpp  Layout.h  Layout.hpp  Widget.cpp  Widget.h  Widget.hpp
Frontend/Color/: Color.h  Color.hpp  DefaultColors.h
Frontend/Draw/: Draw2.h  Draw2.hpp
Frontend/ImGui/: Application.h
Frontend/Widgets/: Button.cpp  Button.h  Button.hpp  MainWidget.cpp  MainWidget.h
Frontend/Windows/: WindowMain.cpp  WindowMain.h
